--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(get_characters)
 export(get_factors)
 export(get_numerics)
 export(save_excel_paired_results)
+export(save_excel_paired_results_filtertest)
 export(save_excel_results)
 export(test_means)
 export(test_proportions)
