--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(check_cochran)
 export(check_fisher)
+export(compute_SMD_table)
 export(compute_continuous_table)
 export(compute_correlation_table)
 export(compute_factorial_table)
@@ -36,5 +37,7 @@ importFrom(data.table,`:=`)
 importFrom(finalfit,fit2df)
 importFrom(finalfit,glmuni)
 importFrom(finalfit,summary_factorlist)
+importFrom(readxl,excel_sheets)
+importFrom(readxl,read_excel)
 importFrom(simpleboot,two.boot)
 importFrom(writexl,write_xlsx)
